src/main/scala/PatternMatching/output/UseThingsAcceptor.output
/Users/venkats/books/vsscala2/Book/code/PatternMatching/UseThingsAcceptor.s
cala:1: error: not found: type ThingsAcceptor
val acceptor = new ThingsAcceptor
                   ^
one error found
